<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Palatschinkencounter</string>
    <string name="bibleverse">\'Go thy way, eat thy bread with joy, and drink thy wine with a
        merry heart; for God hath already accepted thy works.\' Ecclesiastes 9:7</string>
    <string name="btnCounter">+1</string>
    <string name="settings">settings</string>
    <string name="send_feedback">send feedback</string>
    <string name="send_feedback_summary">Report a technical issues or submit new
        features</string>
    <string name="general_preference">General</string>
    <string name="theme_active">Disable darkmode by unsetting the checkbox</string>
    <string name="theme_deactive">Enable darkmode by setting the checkbox</string>
    <string name="version_preference" translatable="false">Version</string>

    <string name="theme_summary">Toggle between dark and light theme</string>
    <string name="txViewCounterState">0</string>
    <string name="textviewComplain">Pancake count</string>

    <string name="attention">Counter reset</string>
    <string name="resetMessage">Do you really want to reset the counter?</string>

    <!-- Key name for theme preference in SharedPreferences -->
    <string name="theme_key" translatable="false">theme</string>
    <!-- Value in SharedPreferences for lightmode option -->
    <string name="lightmode_preference_option_value" translatable="false">lightmode</string>
    <!-- Value in SharedPreferences for darkmode option -->
    <string name="darkmode_preference_option_value" translatable="false">darkmode</string>
    <!-- Value in SharedPreferences for system_preference option -->
    <string name="system_preference_option_value" translatable="false">system</string>


    <string name="cancel" tools:ignore="ButtonCase">NO</string>
    <string name="resetOK">YES</string>
    <string name="about">About the App</string>
    <string name="about_summary">What I want to tell about this app</string>
    <string name="image">image</string>
    <string name="reset">reset counter</string>
    <string name="version" translatable="false">%1$s</string>
    <string name="share_counter">I have eaten %1$s pancakes</string>
    <string name="havefun">have fun :-)</string>
    <string name="share">You can share your current meter reading with friends using the new button in the bottom right corner.</string>
    <string name="resethowto">It is not necessary and under absolutely no circumstances recommended to ever reset the counter. If you want to do it anyway, you should tap and hold your counter on the home page. After resetting the counter and letting the time to undo the counter elapse, the counter will be permanently deleted.</string>
    <string name="intention">If you like pancakes, then of course they should be the best in the
        world. With the pancake counter and the recipe, everyone is now able to prepare the best
        pancakes in the world and even track them.</string>
    <string name="really_important">We always choose the best in life, it is the same with
        hungarian pancakes. We never satisfy ourselves with the second best pancakes.
        It is the same in our own lives. Only the best is just good enough. Have you already made
        the best decision of your life? <b>Have you given your life to Jesus?</b></string>
    <!-- recipe -->

    <string-array name="ingredients_array">
        <item>%1$d Gramm of wheat flour (Type 405)</item>
        <item>%1$d eggs</item>
        <item>%1$d ml of milk</item>
        <item>%1$d ml mineral water preferably sparkling</item>
        <item>%1$d pinch of salt</item>
        <item>%1$d tablespoon of sunflower oil</item>
    </string-array>
    <string-array name="preparation_array">

        <item>At first, I prepare myself all the ingredients. With a pan of this size I can bake
            5-6 pieces</item>
        <item>I stir the eggs lightly until a homogeneous dough is formed</item>

        <item>I stir the dough carefully (at low speed) further</item>
        <item>Now I carefully and slowly fill the milk and the sparkling mineral water into
            it</item>
        <item>Then I add the sifted carefully wheat flour and continue stirring. The sifting will dissolve the first clumps in the flour</item>
        <item>Lastly I put in the sunflower oil und the pinch of salt under stirring</item>
        <item>I now stir the dough well again for 5–7 minutes</item>
        <item>Now I let the dough rest for 10–20 min.</item>

        <item>Meanwhile, I can heat the pan with a very small amount of oil or lard. Attention
            not too hot! On our electric stove I got good results at level 7 of 10</item>

        <item>With a ladle or something else suitable, I put quite quickly so much batter in the
            pan that the layer is thin (here it is a matter of trying out)</item>
        <item>I wait until the visible side dries, then I turn the pancake</item>
        <item>If the underside that is now on top is not brown enough for me, I turn a second time later</item>
        <item>I take the pancake out of the pan and can top or
            sprinkle.</item>
        <item>When it comes to toppings, everything is possible and everything is allowed, from
            tuna to ham or cinnamon and sugar, I can recommend anything. But I like best Apricot
            jam.</item>

    </string-array>
    <string name="thanks">Thank you dad for the recipe.</string>
    <string name="txt_menu_item_recipe">The pancake recipe</string>
    <string name="recipe_summary">The recipe for the best pancakes ever</string>


    <string name="pancake_ingredients">
        Ingredients for %1$d portions
    </string>


    <string name="pancake_preparation">The preparation</string>
    <string name="itsos">This project is open source and can be found under\n
        <a href="https://github.com/amarradi/palatschinkencounter">GitHub</a>.</string>


    <string name="changelogActivity" translatable="false">Changelog</string>

    <string name="recipe_preference">The pancake recipe</string>
    <string name="txt_recipe_entry_txt">Recipe for the best hungarian pancakes from the
        Balaton</string>

    <string name="theme_preference">Theme</string>
    <string name="darkmode_preference" translatable="false">darkmode</string>
    <string name="lightmode_preference" translatable="false">lightmode</string>
    <string name="system_preference" translatable="false">system</string>
    <string name="lightmode_preference_key">lightmode</string>
    <string name="darkmode_preference_key">darkmode</string>
    <string name="system_preference_key">follow system (standard)</string>
    <string name="change">Changelog of the current version and licence</string>
    <string name="item_share">share</string>
    <string name="share_with">share via</string>

    <string name="ready_to_share">Ready to share</string>
    <string name="increase_button">increase</string>
    <string name="decrease_button">decrease</string>
    <string name="increase_description">Increase the amounts</string>
    <string name="decrease_description">decrease the amounts</string>
    <string name="notification">notification</string>
    <string name="portionstoosmall">Less than 1 portion makes no sense, because no one really gets full from it.</string>
    <string name="OK">OK</string>
    <string name="undo">UNDO</string>

    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="birthdayCake">Birthdaycake</string>
    <string name="item_home">home</string>
    <string name="last_count_date">The last time I counted pancakes was on %1$s.</string>
</resources>
