<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general_preference" />
    <ListPreference
        android:defaultValue="pref_color_red_value"
        android:icon="@drawable/ic_dn_switch"
        android:entries="@array/design_mode_preference"
        android:entryValues="@array/design_mode_preference_key"
        android:key="@string/darkmode_preference"
        android:title="@string/theme_summary" />



    <Preference
        android:icon="@drawable/ic_baseline_list_24"
        android:selectable="true"
        app:key="recipe"
        app:summary="@string/recipe_summary"
        app:title="@string/txt_menu_item_recipe" />

    <Preference
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:selectable="true"
        app:key="delete"
        app:summary="@string/resetMessage"
        />

    <PreferenceCategory android:title="@string/about" />
    <Preference
        android:key="about"
        app:summary="@string/about_summary"
        android:icon="@drawable/ic_baseline_contact_support_24"
        android:title="@string/about"

        />
    <Preference
        android:selectable="true"
        app:icon="@drawable/ic_baseline_mail_24"
        app:key="feedback_preference"
        app:summary="@string/send_feedback_summary"
        app:title="@string/send_feedback" />

</PreferenceScreen>