<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="10dp"
    android:overScrollMode="always"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="fill"

            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:contentDescription="@string/image"
            android:src="@drawable/logo_psc"
            android:layout_marginBottom="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/intention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intention"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_decision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"

            android:text="@string/really_important"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:id="@+id/tv_bibleverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"

            android:text="@string/bibleverse"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tvhavefun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/havefun"
            android:textAppearance="?android:attr/textAppearanceLarge"
     />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_share"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/share"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/resethowto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/resethowto"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/itsos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:gravity="center"
            android:text="@string/itsos"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>