<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:id="@+id/tv_startpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/textviewComplain"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/txViewCounterState"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <ImageView
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:id="@+id/image_startpage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/logo_psc_512_transparent" />

        <Button
            android:layout_gravity="center"

            android:id="@+id/counter_text_button"
            android:layout_width="75dp"
            android:layout_height="75dp"

            android:background="@drawable/counter_plus_btn_bg_shape"
            android:fontFamily="@font/opensans_extrabold"

            android:text="@string/btnCounter"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/md_theme_light_onPrimary" />

</LinearLayout>